libgalahad_src += files('filtrane.F90')

libgalahad_cutest_src += files('usefiltrane.F90')

galahad_cutest_binaries += [['runfiltrane_sif', files('runfiltrane_sif.F90')]]

galahad_tests += [['filtrane', 'filtranet', files('filtranet.F90')]]

galahad_examples += [['filtranes', files('filtranes.f90')]]
